kotlin to java migration (point process)